# notepad2

./: CMakeLists.txt  README.md
DarkMode/: IatHook.h  UAHMenuBar.c  UAHMenuBar.h  dark_mode.cpp  dark_mode.h
res/: Notepad2.exe.manifest
src/: Notepad2.aps  Notepad2.c  Notepad2.rc  editor.manifest  resource.h
src/EditLexers/backup/: stlIDL.c
uxtheme-stub/: uxtheme-stub.cpp
